--- a/index.html
+++ b/index.html
@@ -97,7 +97,13 @@
       </section>
     </header>
     <!-- main section start -->
-    <main></main>
+    <main>
+      <!-- product list start -->
+      <div id="products">
+        
+      </div>
+      <!-- product list end -->
+    </main>
     <!-- main section end -->
 
     <!-- javascript -->
